--- a/Andrianow_backers_3isp9-18/Windows/RegistrationWindow.xaml
+++ b/Andrianow_backers_3isp9-18/Windows/RegistrationWindow.xaml
@@ -15,34 +15,34 @@
         <StackPanel>
 
             
-            <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Авторизация" VerticalAlignment="Top" FontWeight="Bold" FontSize="20"/>
-            
-            
-            <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black"  Width="100" Height="30">
+            <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Регистрация" VerticalAlignment="Top" FontWeight="Bold" FontSize="20"/>
+
+
+            <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black"  Width="300" Height="40" Margin="10">
             <TextBox Text="Name" Background="Transparent" BorderThickness="0" Height="20" Name="txtContents" Width="120" VerticalContentAlignment = "Center" />
         </Border>
 
-            <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="100" Height="30" >
+            <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="300" Height="40" Margin="10" >
             <TextBox Text="Age" Background="Transparent" BorderThickness="0" Height="20" Name="txtContents2" Width="120"  VerticalContentAlignment = "Center" />
         </Border>
-            
-            
-            <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="100" Height="30" >
+
+
+            <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="300" Height="40" Margin="10" >
             <TextBox Text="Login" Background="Transparent" BorderThickness="0" Height="20" Name="txtContents3" Width="120"  VerticalContentAlignment = "Center" />
         </Border>
-            
-            
-            <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="100" Height="30" >
+
+
+            <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="300" Height="40" Margin="10" >
             <TextBox Text="Password" Background="Transparent" BorderThickness="0" Height="20" Name="txtContents4" Width="120"  VerticalContentAlignment = "Center" />
         </Border>
-            
-            
-            <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="100" Height="30" >
+
+
+            <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="300" Height="40" Margin="10">
                 <TextBox Text="Phone" Background="Transparent" BorderThickness="0" Height="20" Name="txtContents5" Width="120"  VerticalContentAlignment = "Center" />
             </Border>
-            
-            
-            <Button Content="Зарегистрироваться"  Height="40" Width="160" RenderTransformOrigin="0.5,0.5" Background="#FFB8B8B8" FontWeight="Bold" FontFamily="Bahnschrift">
+
+
+            <Button Content="Зарегистрироваться"  Height="40" Width="160" RenderTransformOrigin="0.5,0.5" Background="#FFB8B8B8" FontWeight="Bold" FontFamily="Bahnschrift" Margin="100">
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="10"/>
