--- a/Andrianow_backers_3isp9-18/Windows/LoginWindow.xaml
+++ b/Andrianow_backers_3isp9-18/Windows/LoginWindow.xaml
@@ -16,7 +16,7 @@
         <Button Content="Войти" HorizontalAlignment="Center" Margin="0,190,0,0" VerticalAlignment="Top" Height="39" Width="134" Grid.Column="1" RenderTransformOrigin="0.5,0.5" Background="#FFB8B8B8" FontSize="16" FontWeight="Bold" FontFamily="Bahnschrift">
             <Button.Resources>
                 <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="10"/> 
+                    <Setter Property="CornerRadius" Value="10"/>  <!--123123123-->
                 </Style>
             </Button.Resources>
         </Button>
