--- a/Andrianow_backers_3isp9-18/App.xaml
+++ b/Andrianow_backers_3isp9-18/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Andrianow_backers_3isp9_18"
-             StartupUri="Windows/RegistrationWindow.xaml">
+             StartupUri="Windows/LoginWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
