--- a/Andrianow_backers_3isp9-18/Windows/RegistrationWindow.xaml
+++ b/Andrianow_backers_3isp9-18/Windows/RegistrationWindow.xaml
@@ -19,26 +19,41 @@
 
 
             <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black"  Width="300" Height="40" Margin="10">
-            <TextBox Text="Name" Background="Transparent" BorderThickness="0" Height="30" Name="txtContents" Width="120" VerticalContentAlignment = "Center" Margin="9,4,169,4" FontSize="14"  />
+                <TextBox Text="Name" Background="Transparent" BorderThickness="0" Height="30" Name="txtRegName" Width="120" VerticalContentAlignment = "Center" Margin="9,4,169,4" FontSize="14"
+                         GotFocus="txtRegName_GotFocus"
+                         LostFocus="txtRegName_LostFocus"
+                         Foreground="#FF898989"/>
         </Border>
 
             <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="300" Height="40" Margin="10" >
-                <TextBox Text="Age" Background="Transparent" BorderThickness="0" Height="20" Name="txtContents2" Width="120"  VerticalContentAlignment = "Center" Margin="9,4,169,4" FontSize="14" />
+                <TextBox Text="Age" Background="Transparent" BorderThickness="0" Height="20" Name="txtRegAge" Width="120"  VerticalContentAlignment = "Center" Margin="9,4,169,4" FontSize="14"
+                         GotFocus="txtRegAge_GotFocus"
+                         LostFocus="txtRegAge_LostFocus"
+                         Foreground="#FF898989"/>
         </Border>
 
 
             <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="300" Height="40" Margin="10" >
-                <TextBox Text="Login" Background="Transparent" BorderThickness="0" Height="20" Name="txtContents3" Width="120"  VerticalContentAlignment = "Center" Margin="9,4,169,4" FontSize="14" />
+                <TextBox Text="Login" Background="Transparent" BorderThickness="0" Height="20" Name="txtRegLogin" Width="120"  VerticalContentAlignment = "Center" Margin="9,4,169,4" FontSize="14" 
+                         GotFocus="txtRegLogin_GotFocus"
+                         LostFocus="txtRegLogin_LostFocus"
+                         Foreground="#FF898989"/>
         </Border>
 
 
             <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="300" Height="40" Margin="10" >
-                <TextBox Text="Password" Background="Transparent" BorderThickness="0" Height="20" Name="txtContents4" Width="120"  VerticalContentAlignment = "Center" Margin="9,4,169,4" FontSize="14" />
+                <TextBox Text="Password" Background="Transparent" BorderThickness="0" Height="20" Name="txtRegPassword" Width="120"  VerticalContentAlignment = "Center" Margin="9,4,169,4" FontSize="14" 
+                         GotFocus="txtRegPassword_GotFocus"
+                         LostFocus="txtRegPassword_LostFocus"
+                         Foreground="#FF898989"/>
         </Border>
 
 
             <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="300" Height="40" Margin="10">
-                <TextBox Text="Phone" Background="Transparent" BorderThickness="0" Height="20" Name="txtContents5" Width="120"  VerticalContentAlignment = "Center" Margin="9,4,169,4" FontSize="14" />
+                <TextBox Text="Phone" Background="Transparent" BorderThickness="0" Height="20" Name="txtRegPhone" Width="120"  VerticalContentAlignment = "Center" Margin="9,4,169,4" FontSize="14" 
+                         GotFocus="txtRegPhone_GotFocus"
+                         LostFocus="txtRegPhone_LostFocus"
+                         Foreground="#FF898989"/>
             </Border>
 
 
