--- a/Andrianow_backers_3isp9-18/Windows/RegistrationWindow.xaml
+++ b/Andrianow_backers_3isp9-18/Windows/RegistrationWindow.xaml
@@ -48,16 +48,7 @@
                          Foreground="#FF898989"/>
         </Border>
             
-            <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="300" Height="40" Margin="10">
-                <StackPanel Orientation="Horizontal" Height="40">
-                    <TextBlock x:Name="GenderTextBlock" Text="Gender" VerticalAlignment="Center" Foreground="#FF898989" Margin="10"/>
-                    <ComboBox x:Name="GenderComboBox" Height="40" Width="200" Background="Transparent" Opacity="0" Margin="-1,-1,-1,-1" SelectionChanged="GenderComboBox_SelectionChanged">
-                        <ComboBoxItem Content="Female"/>
-                        <ComboBoxItem Content="Male"/>
-                    </ComboBox>
-                </StackPanel>
 
-            </Border>
             <Border CornerRadius="5" BorderThickness="1" BorderBrush="Black" Width="300" Height="40" Margin="10">
                 <TextBox Text="Phone" Background="Transparent" BorderThickness="0" Height="20" Name="txtRegPhone" Width="120"  VerticalContentAlignment = "Center" Margin="9,4,169,4" FontSize="14" 
                          GotFocus="txtRegPhone_GotFocus"
@@ -66,7 +57,7 @@
             </Border>
 
 
-            <Button Content="Зарегистрироваться"  Height="60" Width="240" RenderTransformOrigin="0.5,0.5" Background="#FFB8B8B8" FontWeight="Bold" FontFamily="Bahnschrift" Margin="60" FontSize="20">
+            <Button Content="Зарегистрироваться"  Height="60" Width="240" RenderTransformOrigin="0.5,0.5" Background="#FFB8B8B8" FontWeight="Bold" FontFamily="Bahnschrift" Margin="60" FontSize="20" Click="btnRegSubmit_Click">
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
                         <Setter Property="CornerRadius" Value="10"/>
