--- a/Andrianow_backers_3isp9-18/Windows/LoginWindow.xaml
+++ b/Andrianow_backers_3isp9-18/Windows/LoginWindow.xaml
@@ -40,9 +40,9 @@
                          />
             </Border>
            
-            <!--КНОПКА ВХОДА--> 
-            
-            <Button Content="Войти" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top" Height="50" Width="200" Grid.Column="1" RenderTransformOrigin="0.5,0.5" Background="#FFB8B8B8" FontSize="20" FontWeight="Bold" FontFamily="Bahnschrift">
+            <!--КНОПКА ВХОДА-->
+
+            <Button Content="Войти" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top" Height="50" Width="200" Grid.Column="1" RenderTransformOrigin="0.5,0.5" Background="#FFB8B8B8" FontSize="20" FontWeight="Bold" FontFamily="Bahnschrift" Click="BtnSignIn_Click">
                         <Button.Resources>
                             <Style TargetType="Border">
                                 <Setter Property="CornerRadius" Value="10"/>  
