--- a/Andrianow_backers_3isp9-18/Windows/ProductListWindow.xaml
+++ b/Andrianow_backers_3isp9-18/Windows/ProductListWindow.xaml
@@ -41,6 +41,14 @@
                       Width="200" SelectionChanged="CmbSort_SelectionChanged"
                       />
 
+                <Button x:Name="CartButtonProdList"
+                Content="Корзина"
+                Width="100"
+                Height="40"
+                HorizontalAlignment="Right"
+                        Margin="400 0 0 0"
+                        Click="OpenCartClick"
+                    />
 
         </WrapPanel>
 
@@ -49,6 +57,7 @@
                   Margin="5" 
                   d:ItemsSource="{d:SampleData ItemCount=5}"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled" >
+
 
             <!--<ListView.View>
                 <GridView>
@@ -96,12 +105,31 @@
                             <TextBlock Text="{Binding ProdType}" 
                                        FontSize="14"
                                        Margin="10 0 0 0"/>
-                            <Button x:Name="BtnEditProduct" 
-                                    Content="Редактировать"
+
+                            <WrapPanel HorizontalAlignment="Center" >
+                                
+                                <Button x:Name="BtnEditProduct"    
+                                        
                                     Height="30"
-                                    Width="100"
-                                    Margin="10"
-                                    Click="BtnEditProduct_Click"/>
+                                    Width="30"
+                                    Margin="0 10 30 0"
+                                    Background="{x:Null}"
+                                    BorderThickness="0"
+                                    Click="BtnEditProduct_Click">
+                                    <Image Source="/Resur/pencil-box.png" />
+                                </Button>
+
+                                <Button x:Name="BtnAddToCartProduct"                                     
+                                    Height="30"
+                                    Width="30"
+                                    Margin="30 10 0 0"
+                                    Background="{x:Null}"
+                                    BorderThickness="0"
+                                        Click="BtnAddToCartProduct_Click">
+                                    <Image Source="/Resur/pngwing.com.png" 
+                                           />
+                                </Button>
+                            </WrapPanel>
                         </StackPanel>
                     </Border>
 
