--- a/Andrianow_backers_3isp9-18/Windows/ProductListWindow.xaml
+++ b/Andrianow_backers_3isp9-18/Windows/ProductListWindow.xaml
@@ -1,13 +1,16 @@
 ﻿<Window x:Class="Andrianow_backers_3isp9_18.Windows.ProductListWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Andrianow_backers_3isp9_18.Windows"
-        mc:Ignorable="d"
-        Title="ProductListWindow" Height="800" Width="1200">
+     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+     xmlns:local="clr-namespace:Andrianow_backers_3isp9_18.Windows"
+     mc:Ignorable="d"
+     Title="ProductListWindow" Height="800" Width="1200"
+     MinHeight="500"
+     MinWidth="1200">
     <Grid>
         <Grid.RowDefinitions>
+            <!-- Определяем 4 строки сетки: -->
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
@@ -58,14 +61,6 @@
                   d:ItemsSource="{d:SampleData ItemCount=5}"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled" >
 
-
-            <!--<ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Название" Width="150" DisplayMemberBinding="{Binding Title}"/>
-                    <GridViewColumn Header="Цена" Width="150" DisplayMemberBinding="{Binding Price}"/>
-                    <GridViewColumn Header="Тип" Width="150" DisplayMemberBinding="{Binding ProdType}"/>
-                </GridView>
-            </ListView.View>-->
 
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -126,10 +121,12 @@
                                     Background="{x:Null}"
                                     BorderThickness="0"
                                         Click="BtnAddToCartProduct_Click">
-                                    <Image Source="/Resur/pngwing.com.png" 
-                                           />
+                                    <Image Source="/Resur/pngwing.com.png"/>
+                                    
                                 </Button>
+                                
                             </WrapPanel>
+                            
                         </StackPanel>
                     </Border>
 
